# MRA-V1

./: .gitignore  CLAUDE.md  Dockerfile  README.md  cont.py  cont_ds4.py  docker-compose.yml
arm/meshes/: base_link.stl  link_4.stl  link_5.stl
arm/urdf/: robot.urdf
arm_6dof/: CMakeLists.txt  arm_6dof.xml  package.xml
arm_6dof/include/arm_6dof/: arm_6dof.hpp  visibility_control.h
arm_6dof/src/: arm_6dof.cpp
arm_6dof/test/: test_arm_6dof.cpp
arm_desc/: CMakeLists.txt  package.xml
arm_desc/launch/: display.launch.py  gazebo.launch.py
arm_desc/meshes/: link_1.stl
arm_desc/rviz/: urdf.rviz
arm_desc/urdf/: robot.urdf  robot.urdf.xacro
arm_moveit_config/: .setup_assistant  package.xml
arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  robotic_arm.ros2_control.xacro  robotic_arm.srdf  robotic_arm.urdf.xacro  robotic_arm_real.ros2_control.xacro  robotic_arm_real.urdf.xacro  ros2_controllers.yaml
arm_moveit_config/launch/: demo.launch.py  demo_real.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
robot_v2/: robot_v2.ino
robot_v3/: robot_v3.ino
worlds/: arm_workspace.world
