<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_6dof</name>
  <version>0.0.0</version>
  <description>ROS 2 Control package for a 6 DOF robotic arm</description>
  <maintainer email="169849961+snow10100@users.noreply.github.com">snow10100</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>

  <depend>pluginlib</depend>

  <depend>rclcpp</depend>

  <depend>rclcpp_lifecycle</depend>

  <depend>serial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
